# MacAddressChanger

./: .gitignore  CMakeLists.txt  build_cpp.bat  compile_cpp.bat  macchanger.py  originalmacs.txt  readme.md  run_macchanger.bat  setup_hyperv.py  test_compiler.bat
docs/: cpp_setup.md
launchers/: README.md  run_macchanger_cpp.bat  setup_hyperv.bat
scripts/: README.md  build_cpp.bat  compile_cpp.bat  test_compiler.bat
src/: README.md
src/cpp/: macchanger.cpp
tools/: README.md  check_environment.bat  clean_build.bat
